修改基础配置和添加waline评论

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -272,7 +272,7 @@ const showBuildTime = config_site.footer?.buildtime ? true : false
     }
   }
 </script>
-<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<script async src="https://busuanzi.icodeq.com/busuanzi.pure.mini.js"></script>
 <style>
 .site-footer {
   width: 100%;
